feature: enable comments

--- a/site/themes/sogilis/assets/sass/768-991.scss
+++ b/site/themes/sogilis/assets/sass/768-991.scss
@@ -2704,4 +2704,8 @@ textarea:focus{
     			margin-left: 60px;
     		}
         }
+
+        .comments {
+            margin-top: 3rem;
+        }
 	}
