--- a/site/themes/sogilis/assets/sass/sup1200.scss
+++ b/site/themes/sogilis/assets/sass/sup1200.scss
@@ -2594,4 +2594,8 @@ textarea:focus{
     			margin-left: 60px;
     		}
         }
+
+        .comments {
+            margin-top: 3rem;
+        }
 	}
