--- a/site/themes/sogilis/assets/sass/992-1199.scss
+++ b/site/themes/sogilis/assets/sass/992-1199.scss
@@ -2580,4 +2580,8 @@ textarea:focus{
     			margin-left: 60px;
     		}
         }
+
+        .comments {
+            margin-top: 3rem;
+        }
 	}
