fix: menu links

--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -3,12 +3,12 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-1">
-                <a href="index.html"><img src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
+                <a href="https://sogilis.fr/index.html"><img src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
             </div>
 
             <div class="col-10 col-sm-5 col-md-4 offset-md-1 col-lg-3 offset-lg-1">
                 <h1 class="title_level_1">Contact</h1>
-                <a class="btn_dark_grey" href="contact.html">
+                <a class="btn_dark_grey" href="https://sogilis.fr/contact.html">
                     {{ i18n "contactUs" }}
                     <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          viewBox="0 0 7.5 10.3" style="enable-background:new 0 0 7.5 10.3;" xml:space="preserve">
@@ -82,17 +82,17 @@
             <div class="col-11 offset-1  col-sm-7 col-md-5 offset-md-1 col-lg-3 offset-lg-2">
                 <h1 class="title_level_1">{{ i18n "services" }}</h1>
                 <ul>
-                    <li><a href="services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
-                    <li><a href="services-embarques-et-iot.html" class="liens_text">{{ i18n "embeddedSoftwares" }}</a></li>
-                    <li><a href="services-logiciels-critiques.html" class="liens_text">{{ i18n "criticalSoftwares" }}</a></li>
+                    <li><a href="https://sogilis.fr/services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
+                    <li><a href="https://sogilis.fr/services-embarques-et-iot.html" class="liens_text">{{ i18n "embeddedSoftwares" }}</a></li>
+                    <li><a href="https://sogilis.fr/services-logiciels-critiques.html" class="liens_text">{{ i18n "criticalSoftwares" }}</a></li>
                 </ul>
             </div>
 
             <div class="col-11 offset-1  col-sm-5 col-md-4 offset-md-0 col-lg-3 offset-lg-1">
                 <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
                 <ul>
-                    <li><a href="vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
-                    <li><a href="emplois.html" class="liens_text">{{ i18n "jobs" }}</a></li>
+                    <li><a href="https://sogilis.fr/vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
+                    <li><a href="https://sogilis.fr/emplois.html" class="liens_text">{{ i18n "jobs" }}</a></li>
                     <li><a href="" class="liens_text">{{ i18n "blog" }}</a></li>
                 </ul>
             </div>
@@ -120,7 +120,7 @@
 <div class="content-menu-mobile" id="content-menu">
     <div class="container">
       <div class="col-xs-3">
-        <a href="index.html">
+        <a href="https://sogilis.fr/index.html">
            <img src="{{ "images/logo_sogilis.svg" | relURL }}">
         </a>
       </div>
@@ -131,19 +131,19 @@
         <nav class="mainMenuMobile">
         <ul>
           <li>
-            <a href="services-applications-cloud-native.html">{{i18n "cloudNativeApplications" }}</a>
+            <a href="https://sogilis.fr/services-applications-cloud-native.html">{{i18n "cloudNativeApplications" }}</a>
           </li>
           <li>
-            <a href="services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
+            <a href="https://sogilis.fr/services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
           </li>
           <li>
-            <a href="services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
+            <a href="https://sogilis.fr/services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
           </li>
            <li>
-            <a href="vision.html">{{ i18n "ourVision" }}</a>
+            <a href="https://sogilis.fr/vision.html">{{ i18n "ourVision" }}</a>
           </li>
           <li>
-            <a href="contact.html">{{ i18n "contact" }}</a>
+            <a href="https://sogilis.fr/contact.html">{{ i18n "contact" }}</a>
           </li>
         </ul>
       </nav>
