--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -9,13 +9,13 @@
                 <div class="dropdown">
                     <button class="dropbtn">{{ i18n "services"}}</button>
                     <div class="dropdown-content">
-                        <a href="services-applications-cloud-native.html">{{ i18n "cloudNativeApplications" }}</a>
-                        <a href="services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
-                        <a href="services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
+                        <a href="https://sogilis.fr/services-applications-cloud-native.html">{{ i18n "cloudNativeApplications" }}</a>
+                        <a href="https://sogilis.fr/services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
+                        <a href="https://sogilis.fr/services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
                     </div>
                 </div>
-                <a href="vision.html" class="menu_link_1">{{ i18n "ourVision" }}</a>
-                <a href="contact.html" class="menu_link_2">{{ i18n "contact" }}</a>
+                <a href="https://sogilis.fr/vision.html" class="menu_link_1">{{ i18n "ourVision" }}</a>
+                <a href="https://sogilis.fr/contact.html" class="menu_link_2">{{ i18n "contact" }}</a>
             </nav>
         </div>
     </div>
