fixup! Add missing alt attribute in images

--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-1">
-                <a href="https://sogilis.fr/index.html"><img src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
+                <a href="https://sogilis.fr/index.html"><img alt="Logo Sogilis" src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
             </div>
 
             <div class="col-10 col-sm-5 col-md-4 offset-md-1 col-lg-3 offset-lg-1">
@@ -121,7 +121,7 @@
     <div class="container">
       <div class="col-xs-3">
         <a href="https://sogilis.fr/index.html">
-           <img src="{{ "images/logo_sogilis.svg" | relURL }}">
+           <img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}">
         </a>
       </div>
       <div class="col-xs-2 col-xs-offset-7">
