--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-2 offset-md-1 col-lg-2 offset-lg-2 col-xl-2 offset-xl-2">
-                <a href="index.html"><img src="{{ "images/logo_sogilis.svg" | relURL }}"></a>
+                <a href="index.html"><img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}"></a>
             </div>
 
             <nav class="col-md-6 offset-md-3 col-lg-4 offset-lg-3 col-xl-5 offset-xl-2 ">
