--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -10,13 +10,13 @@
             <link rel="stylesheet" media="screen and {{ $media_query }}" href="{{ $style.Permalink }}" type="text/css" />
         {{ end }}
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ "css/bootstrap-4.0.0.min.css" | relURL }}" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ "css/aos.css" | relURL }}" />
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+        <script src="{{ "js/jquery-3.3.1.min.js" | relURL }}" type="text/javascript"></script>
         <script src="{{ "js/aos.js" | relURL }}" charset="utf-8" type="text/javascript"></script>
         <script src="{{ "js/js.cookie-2.0.4.min.js" | relURL }}" charset="utf-8" type="text/javascript"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="{{ "js/bootstrap-4.0.0.min.js" | relURL }}" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
         <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}"/>
     </head>
