Footer: create grid-css + remove bootstrap grid (existing scss files not modified)

--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="{{ "css/bootstrap-4.0.0.min.css" | relURL }}">
         <link rel="stylesheet" href="{{ "css/aos.css" | relURL }}" />
+        <link rel="stylesheet" href="{{ "css/footer.css" | relURL }}" />
 
         <script src="{{ "js/jquery-3.3.1.min.js" | relURL }}" type="text/javascript"></script>
         <script src="{{ "js/aos.js" | relURL }}" charset="utf-8" type="text/javascript"></script>
