--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -1,17 +1,20 @@
 
- <footer class="container-fluid" style="margin-top: 0px;">
-    <div class="container">
-        <div class="row">
-            <div class="d-none d-lg-block col-lg-1">
-                <a href="https://sogilis.fr/index.html"><img alt="Logo Sogilis" src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
-            </div>
+ <footer id="footer" class="container-fluid" style="margin-top: 0px;">
+    <div id="sogilisFooter" class="container">
 
-            <div class="col-10 col-sm-5 col-md-4 offset-md-1 col-lg-3 offset-lg-1">
-                <h1 class="title_level_1">Contact</h1>
+        <div id="sogilisFooterLogo">
+            <a href="https://sogilis.fr/index.html"><img alt="Logo Sogilis" src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
+        </div>
+
+        <div id="sogilisFooterContactgrid">
+
+            <h1 id="sogilisFooterContactgridTitle" class="title_level_1">Contact</h1>
+
+            <div id="sogilisFooterContactgridContactus">
                 <a class="btn_dark_grey" href="https://sogilis.fr/contact.html">
                     {{ i18n "contactUs" }}
                     <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                         viewBox="0 0 7.5 10.3" style="enable-background:new 0 0 7.5 10.3;" xml:space="preserve">
+                        viewBox="0 0 7.5 10.3" style="enable-background:new 0 0 7.5 10.3;" xml:space="preserve">
                     <style type="text/css">
                         .st0{fill:none;stroke-width:3;}
                     </style>
@@ -20,13 +23,13 @@
                 </a>
             </div>
 
-            <div class="col-2 col-sm-7 col-md-1 col-lg-1">
+            <div id="sogilisFooterContactgridTwitter">
                 {{ with $.Site.Params.twitter }}
                 <a class="liens_sociaux twitter" href="{{ . }}">
                     <svg version="1.1"
-                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-                         x="0px" y="0px" width="27.1px" height="22.1px" viewBox="0 0 27.1 22.1" style="enable-background:new 0 0 27.1 22.1;"
-                         xml:space="preserve" class="twitter">
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+                        x="0px" y="0px" width="27.1px" height="22.1px" viewBox="0 0 27.1 22.1" style="enable-background:new 0 0 27.1 22.1;"
+                        xml:space="preserve" class="twitter">
                     <defs>
                     </defs>
                     <path id="ico_twitter_1_" d="M27.1,2.6c-1,0.4-2.1,0.7-3.2,0.9c1.2-0.7,2-1.8,2.5-3.1c-1.1,0.6-2.3,1.1-3.5,1.4
@@ -45,21 +48,21 @@
                 {{ with $.Site.Params.linkedin }}
                 <a class="liens_sociaux" href="{{ . }}">
                     <svg version="1.1"
-                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-                         x="0px" y="0px" width="25.2px" height="24px" viewBox="0 0 25.2 24" style="enable-background:new 0 0 25.2 24;"
-                         xml:space="preserve">
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+                        x="0px" y="0px" width="25.2px" height="24px" viewBox="0 0 25.2 24" style="enable-background:new 0 0 25.2 24;"
+                        xml:space="preserve">
                     <defs>
                     </defs>
                     <path id="ico_linkedin_1_" class="st0" d="M25.2,14.7V24h-5.4v-8.7c0-2.2-0.8-3.7-2.7-3.7c-1.2,0-2.4,0.8-2.8,2
                         c-0.1,0.4-0.2,0.9-0.2,1.3V24H8.7c0,0,0.1-14.7,0-16.2h5.4v2.3l0,0.1h0v-0.1c1-1.7,2.9-2.8,4.9-2.7C22.5,7.4,25.2,9.8,25.2,14.7z
-                         M3.1,0C1.5-0.1,0.2,1,0,2.6s1,2.9,2.5,3.1c0.1,0,0.3,0,0.4,0h0c1.5,0.1,2.9-1,3.1-2.5S5.1,0.2,3.5,0C3.4,0,3.2,0,3.1,0z M0.3,24
+                        M3.1,0C1.5-0.1,0.2,1,0,2.6s1,2.9,2.5,3.1c0.1,0,0.3,0,0.4,0h0c1.5,0.1,2.9-1,3.1-2.5S5.1,0.2,3.5,0C3.4,0,3.2,0,3.1,0z M0.3,24
                         h5.4V7.8H0.3V24z"/>
                     </svg>
                 </a>
                 {{ end }}
             </div>
 
-            <div class="col-10 offset-1 col-sm-6 offset-sm-1 col-md-5 offset-md-2 offset-lg-0 col-lg-3 adresses">
+            <div id="sogilisFooterContactgridGrenoble" class="adresses">
                 <p class="title_name">Sogilis Grenoble</p>
                 <p class="text_description">
                     4 Avenue Doyen Louis Weil<br>
@@ -68,7 +71,7 @@
                 </p>
             </div>
 
-            <div class="col-10 offset-1 col-sm-5 offset-sm-0 col-md-4 col-lg-3 adresses">
+            <div id="sogilisFooterContactgridLyon" class="adresses">
                 <p class="title_name">Sogilis Lyon</p>
                 <p class="text_description">
                     45 Rue Sainte-Geneviève<br>
@@ -78,33 +81,29 @@
             </div>
         </div>
 
-        <div class="row liens_pages">
-            <div class="col-11 offset-1  col-sm-7 col-md-5 offset-md-1 col-lg-3 offset-lg-2">
-                <h1 class="title_level_1">{{ i18n "services" }}</h1>
-                <ul>
-                    <li><a href="https://sogilis.fr/services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
-                    <li><a href="https://sogilis.fr/services-embarques-et-iot.html" class="liens_text">{{ i18n "embeddedSoftwares" }}</a></li>
-                    <li><a href="https://sogilis.fr/services-logiciels-critiques.html" class="liens_text">{{ i18n "criticalSoftwares" }}</a></li>
-                </ul>
-            </div>
-
-            <div class="col-11 offset-1  col-sm-5 col-md-4 offset-md-0 col-lg-3 offset-lg-1">
-                <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
-                <ul>
-                    <li><a href="https://sogilis.fr/vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
-                    <li><a href="https://sogilis.fr/emplois.html" class="liens_text">{{ i18n "jobs" }}</a></li>
-                    <li><a href="" class="liens_text">{{ i18n "blog" }}</a></li>
-                </ul>
-            </div>
+        <div id="sogilisFooterServices">
+            <h1 class="title_level_1">{{ i18n "services" }}</h1>
+            <ul>
+                <li><a href="https://sogilis.fr/services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
+                <li><a href="https://sogilis.fr/services-embarques-et-iot.html" class="liens_text">{{ i18n "embeddedSoftwares" }}</a></li>
+                <li><a href="https://sogilis.fr/services-logiciels-critiques.html" class="liens_text">{{ i18n "criticalSoftwares" }}</a></li>
+            </ul>
         </div>
 
-        <div class="row">
-            <div class="col-12">
-                <div class="trait_gris_clair"></div>
-            </div>
+        <div id="sogilisFooterCompany">
+            <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
+            <ul>
+                <li><a href="https://sogilis.fr/vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
+                <li><a href="https://sogilis.fr/emplois.html" class="liens_text">{{ i18n "jobs" }}</a></li>
+                <li><a href="" class="liens_text">{{ i18n "blog" }}</a></li>
+            </ul>
         </div>
 
-        <div class="row subfooter  justify-content-between">
+        <div id="sogilisFooterHr">
+            <div class="trait_gris_clair"></div>
+        </div>
+
+        <div id="sogilisFooterSubfooter" class="row subfooter  justify-content-between">
             <div class="col-9 col-sm-8 col-md-4 col-lg-4">
                 <p class="text_description">{{ i18n "allRightsReserved" }}</p>
             </div>
