--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -10,7 +10,7 @@
 
             <h1 id="sogilisFooterContactgridTitle" class="title_level_1">Contact</h1>
 
-            <div id="sogilisFooterContactgridContactus">
+            <p id="sogilisFooterContactgridContactus">
                 <a class="btn_dark_grey" href="https://sogilis.fr/contact.html">
                     {{ i18n "contactUs" }}
                     <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -21,15 +21,15 @@
                     <path id="Tracé_16" class="st0" d="M1.2,9.2l4.1-4.1L1.1,1.2"/>
                     </svg>
                 </a>
-            </div>
+            </p>
 
-            <div id="sogilisFooterContactgridTwitter">
+            <div id="sogilisFooterContactgridSocialnetwork">
                 {{ with $.Site.Params.twitter }}
                 <a class="liens_sociaux twitter" href="{{ . }}">
                     <svg version="1.1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
                         x="0px" y="0px" width="27.1px" height="22.1px" viewBox="0 0 27.1 22.1" style="enable-background:new 0 0 27.1 22.1;"
-                        xml:space="preserve" class="twitter">
+                        xml:space="preserve">
                     <defs>
                     </defs>
                     <path id="ico_twitter_1_" d="M27.1,2.6c-1,0.4-2.1,0.7-3.2,0.9c1.2-0.7,2-1.8,2.5-3.1c-1.1,0.6-2.3,1.1-3.5,1.4
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-        <div id="sogilisFooterServices">
+        <div id="sogilisFooterServices" class="liens_pages">
             <h1 class="title_level_1">{{ i18n "services" }}</h1>
             <ul>
                 <li><a href="https://sogilis.fr/services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
@@ -90,7 +90,7 @@
             </ul>
         </div>
 
-        <div id="sogilisFooterCompany">
+        <div id="sogilisFooterCompany" class="liens_pages">
             <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
             <ul>
                 <li><a href="https://sogilis.fr/vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
