Footer: rename css prefix sogilisFooter to sofooter

--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -1,16 +1,16 @@
 
  <footer id="footer" class="container-fluid" style="margin-top: 0px;">
-    <div id="sogilisFooter" class="container">
+    <div id="sofooter" class="container">
 
-        <div id="sogilisFooterLogo">
+        <div id="sofooterLogo">
             <a href="https://sogilis.fr/index.html"><img alt="Logo Sogilis" src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
         </div>
 
-        <div id="sogilisFooterContactgrid">
+        <div id="sofooterContactgrid">
 
-            <h1 id="sogilisFooterContactgridTitle" class="title_level_1">Contact</h1>
+            <h1 id="sofooterContactgridTitle" class="title_level_1">Contact</h1>
 
-            <p id="sogilisFooterContactgridContactus">
+            <p id="sofooterContactgridContactus">
                 <a class="btn_dark_grey" href="https://sogilis.fr/contact.html">
                     {{ i18n "contactUs" }}
                     <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -23,7 +23,7 @@
                 </a>
             </p>
 
-            <div id="sogilisFooterContactgridSocialnetwork">
+            <div id="sofooterContactgridSocialnetwork">
                 {{ with $.Site.Params.twitter }}
                 <a class="liens_sociaux twitter" href="{{ . }}">
                     <svg version="1.1"
@@ -62,7 +62,7 @@
                 {{ end }}
             </div>
 
-            <div id="sogilisFooterContactgridGrenoble" class="adresses">
+            <div id="sofooterContactgridGrenoble" class="adresses">
                 <p class="title_name">Sogilis Grenoble</p>
                 <p class="text_description">
                     4 Avenue Doyen Louis Weil<br>
@@ -71,7 +71,7 @@
                 </p>
             </div>
 
-            <div id="sogilisFooterContactgridLyon" class="adresses">
+            <div id="sofooterContactgridLyon" class="adresses">
                 <p class="title_name">Sogilis Lyon</p>
                 <p class="text_description">
                     45 Rue Sainte-Geneviève<br>
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-        <div id="sogilisFooterServices" class="liens_pages">
+        <div id="sofooterServices" class="liens_pages">
             <h1 class="title_level_1">{{ i18n "services" }}</h1>
             <ul>
                 <li><a href="https://sogilis.fr/services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
@@ -90,7 +90,7 @@
             </ul>
         </div>
 
-        <div id="sogilisFooterCompany" class="liens_pages">
+        <div id="sofooterCompany" class="liens_pages">
             <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
             <ul>
                 <li><a href="https://sogilis.fr/vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
@@ -99,11 +99,11 @@
             </ul>
         </div>
 
-        <div id="sogilisFooterHr">
+        <div id="sofooterHr">
             <div class="trait_gris_clair"></div>
         </div>
 
-        <div id="sogilisFooterSubfooter" class="row subfooter  justify-content-between">
+        <div id="sofooterSubfooter" class="row subfooter  justify-content-between">
             <div class="col-9 col-sm-8 col-md-4 col-lg-4">
                 <p class="text_description">{{ i18n "allRightsReserved" }}</p>
             </div>
